--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.7",
     "@types/node": "^20.8.10",
+    "@types/uuid": "^9.0.7",
     "eslint": "^8.52.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
@@ -43,6 +44,7 @@
   },
   "dependencies": {
     "@ethersphere/bee-js": "^6.4.1",
-    "ethers": "^6.8.0"
+    "ethers": "^6.8.0",
+    "uuid": "^9.0.1"
   }
 }
